// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats test should create all collections: all stat collections 1`] = `
Object {
  "detailed": Object {
    "collection1.sub-collection1-1": Object {
      "collectionName": "collection1.sub-collection1-1",
      "stats": Object {
        "fails": Object {
          "collectionName": "collection1.sub-collection1-1",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "collection1.sub-collection1-1",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
    "collection1.sub-collection1-2": Object {
      "collectionName": "collection1.sub-collection1-2",
      "stats": Object {
        "fails": Object {
          "collectionName": "collection1.sub-collection1-2",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "collection1.sub-collection1-2",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
    "collection2.sub-collection.sub-sub-collection": Object {
      "collectionName": "collection2.sub-collection.sub-sub-collection",
      "stats": Object {
        "fails": Object {
          "collectionName": "collection2.sub-collection.sub-sub-collection",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "collection2.sub-collection.sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
  },
  "global": Object {
    "global": Object {
      "collectionName": "",
      "headers": Array [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": Array [
        Array [
          "collection1.sub-collection1-1",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        Array [
          "collection1.sub-collection1-2",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        Array [
          "collection2.sub-collection.sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should create all collections: stat sub-collections 1`] = `
Object {
  "detailed": Object {
    "sub-sub-collection": Object {
      "collectionName": "sub-sub-collection",
      "stats": Object {
        "fails": Object {
          "collectionName": "sub-sub-collection",
          "headers": Array [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": Array [
            Array [
              "sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            Array [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
      },
    },
  },
  "global": Object {
    "global": Object {
      "collectionName": "",
      "headers": Array [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": Array [
        Array [
          "sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should log all collections: all stats as string 1`] = `
Array [
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         \\"Stats Test\\" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
]
`;

exports[`Stats test should log all collections: sub-collection stats as string 1`] = `
Array [
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         \\"Stats Test\\" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
]
`;
